Fixes on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ input[type="date"]::-webkit-clear-button {
 .logo {
   width: 129px;
   height: 129px;
-  background-image: url("/images/logo/logo.svg");
+  background-image: url("/3ommal/images/logo/logo.svg");
   background-color: #fff;
   background-repeat: no-repeat;
   background-position: center;
@@ -1487,14 +1487,14 @@ input[type="date"]::-webkit-clear-button {
 .iti__flag {
   height: 15px;
   box-shadow: 0px 0px 1px 0px #888;
-  background-image: url("/images/icons/flags.png");
+  background-image: url("/3ommal/images/icons/flags.png");
   background-repeat: no-repeat;
   background-color: #DBDBDB;
   background-position: 20px 0; }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .iti__flag {
-    background-image: url("/images/icons/flags@2x.png"); } }
+    background-image: url("/3ommal/images/icons/flags@2x.png"); } }
 .iti__flag.iti__np {
   background-color: transparent; }
 
@@ -1838,7 +1838,7 @@ ol.bjqs-markers {
   display: list-item; }
 
 .icon {
-  background-image: url("/images/icons/icons.svg");
+  background-image: url("/3ommal/images/icons/icons.svg");
   background-size: 900px;
   background-position: 0 -13px;
   text-indent: -9999px;
@@ -2025,21 +2025,21 @@ ol.bjqs-markers {
     .icon.icon-down-app.down-app-primary {
       background-position: -646px -275px; }
   .icon.icon-fb {
-    background-image: url("/images/icons/fb.svg");
+    background-image: url("/3ommal/images/icons/fb.svg");
     width: 20px;
     height: 20px;
     display: inline-block;
     background-size: 20px;
     background-position: 0 0; }
   .icon.icon-tw {
-    background-image: url("/images/icons/tw.svg");
+    background-image: url("/3ommal/images/icons/tw.svg");
     width: 20px;
     height: 20px;
     display: inline-block;
     background-size: 20px;
     background-position: 0 0; }
   .icon.icon-instagram {
-    background-image: url("/images/icons/instagram.svg");
+    background-image: url("/3ommal/images/icons/instagram.svg");
     width: 20px;
     height: 20px;
     display: inline-block;
@@ -2655,7 +2655,7 @@ button.btn {
     .home-menu .home-menu-container:before, .home-menu .home-menu-container:after {
       background-repeat: no-repeat !important; }
     .home-menu .home-menu-container:before {
-      background: url("/images/icons/home_bg_right.svg");
+      background: url("/3ommal/images/icons/home_bg_right.svg");
       content: "";
       height: 495px;
       width: 180px;
@@ -2666,7 +2666,7 @@ button.btn {
       top: -50px;
       background-position: 0 0px; }
     .home-menu .home-menu-container:after {
-      background: url("/images/icons/requests-left.svg");
+      background: url("/3ommal/images/icons/requests-left.svg");
       content: "";
       height: 495px;
       width: 80px;
@@ -2757,7 +2757,7 @@ button.btn {
   width: 100%;
   float: right; }
   .main.circles-bg {
-    background: url("/images/background/home.svg");
+    background: url("/3ommal/images/background/home.svg");
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover; }
@@ -2805,7 +2805,7 @@ button.btn {
     height: 100%;
     top: 0;
     right: 0;
-    background-image: url("/images/icons/requests-right.svg");
+    background-image: url("/3ommal/images/icons/requests-right.svg");
     background-repeat: no-repeat;
     background-position: 17px 80px;
     z-index: -1; }
@@ -2816,7 +2816,7 @@ button.btn {
     height: 100%;
     top: 0;
     left: 0;
-    background-image: url("/images/icons/requests-left.svg");
+    background-image: url("/3ommal/images/icons/requests-left.svg");
     background-repeat: no-repeat;
     background-position: 0 130px;
     z-index: -1; }
@@ -2878,7 +2878,7 @@ ul[role="tablist"] {
   height: 100%;
   top: 0;
   right: 0;
-  background-image: url("/images/icons/requests-right.svg");
+  background-image: url("/3ommal/images/icons/requests-right.svg");
   background-repeat: no-repeat;
   background-position: 17px 80px;
   z-index: -1;
@@ -2890,7 +2890,7 @@ ul[role="tablist"] {
   height: 100%;
   top: 0;
   left: 0;
-  background-image: url("/images/icons/requests-left.svg");
+  background-image: url("/3ommal/images/icons/requests-left.svg");
   background-repeat: no-repeat;
   background-position: 0 130px;
   z-index: -1;
@@ -2902,7 +2902,7 @@ ul[role="tablist"] {
   right: 0;
   z-index: 999; }
 .chat-page .chat-bg {
-  background-image: url("/images/background/chat-bg.svg");
+  background-image: url("/3ommal/images/background/chat-bg.svg");
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.46;
@@ -2990,7 +2990,7 @@ ul[role="tablist"] {
     left: 0;
     right: auto;
     top: -112px;
-    background-image: url("/images/icons/requests-right.svg");
+    background-image: url("/3ommal/images/icons/requests-right.svg");
     width: 183px;
     height: 112px;
     background-position: 0 0; }
@@ -3037,7 +3037,7 @@ ul[role="tablist"] {
   min-height: 100%; }
   .public .home-menu .home-menu-container:before {
     background-repeat: no-repeat !important;
-    background: url("/images/icons/requests-right.svg");
+    background: url("/3ommal/images/icons/requests-right.svg");
     top: 0;
     right: 0;
     height: 100%; }
@@ -3065,7 +3065,7 @@ ul[role="tablist"] {
       left: 0;
       right: auto;
       bottom: 0;
-      background-image: url("/images/icons/requests-right.svg");
+      background-image: url("/3ommal/images/icons/requests-right.svg");
       width: 183px;
       height: 112px;
       background-position: 0 0; }
@@ -3290,7 +3290,7 @@ h1.heading {
     max-width: 960px; }
 
   .site-header .logo {
-    background-image: url("/images/logo/logo-white.svg");
+    background-image: url("/3ommal/images/logo/logo-white.svg");
     background-color: transparent; } }
 @media (min-width: 1200px) {
   .public .site.container {
